<resources>
    <string name="app_name">Cartoon</string>
    <string name="title_warning_dialog">Warning!</string>
    <string name="empty_start_address_warning">Start address cannot be empty!</string>
    <string name="empty_end_address_warning">Destination address cannot be empty!</string>
    <string name="search_start_location_not_found">Start Location %1$s was not found!</string>
    <string name="search_destination_location_not_found">Destination Location %1$s was not found!</string>
    <string name="search_by_proximity">Nearby</string>
    <string name="search_by_route">Route</string>
    <string name="search_start_location">Start</string>
    <string name="search_destination">Destination</string>
    <string name="search">Search!</string>
    <string name="settings">Settings</string>
    <string name="preference_title">Settings</string>
    <string name="title_theme_preference">Theme</string>
    <string name="summary_theme_preference">Set the application theme.</string>
    <string name="title_draw_overview_polyline">Draw Route</string>
    <string name="summary_draw_overview_polyline">Set whether or not it should draw the route on the map.</string>
    <string name="general">General</string>
    <string name="geocoder_invalid_args">"Location %1$s is not valid! "</string>
    <string name="geocoder_not_available">Geocoder service is not available...try later!</string>
    <string name="route_search_request_failed">Failed to fetch route from server...try later!</string>
    <string name="camera_request_failed">Failed to fetch camera list from server...try later!</string>
    <string name="camera_connection_failed">Couldn\'t connect to camera %1$s.</string>
    <string name="camera_render_failed">Couldn\'t display...camera %1$s may be using an unsupported codec.</string>
    <string name="camera_unexpected_error">Couldn\'t connect to camera %1$s due to an unexpected error.</string>
    <string name="permission_request_explanation">This app requires access to your position in order to work.</string>
    <string name="permission_not_granted">Permission was not granted...</string>
    <string name="video_player_holder_dialog_title">Camera</string>
    <string name="title_nearby_search_radius">Search Radius</string>
    <string name="summary_nearby_search_radius">Determine the nearby search area in meters.</string>
    <string name="exo_player_retry">Retry</string>
    <string name="location_not_enabled">Location services are disabled...It is necessary to enable them in order for the app to use it. Press ok if you want to enable them otherwise app will be closed.</string>
    <string name="route_search_type_car">Car</string>
    <string name="route_search_type_walk">Walk</string>
    <string name="search_start_address">Start Address</string>
    <string name="route_search_title">Route Settings</string>
    <string name="exit_confirm_title">Exit?</string>
    <string name="exit_confirm_message">Are you sure you want to quit?</string>
    <string name="route_settings">Route Settings</string>
    <string name="show_cameras">Show Cameras</string>
    <string name="dynamic_mode">Dynamic Mode</string>
    <string name="camera_ip_address">IP Address:%1$s</string>
    <string name="camera_port">Port:%1$s</string>
    <string name="camera_latitude">Latitude:%1$s</string>
    <string name="camera_longitude">Longitude:%1$s</string>
    <string name="video_page_info_title">Camera Info</string>
    <string name="start_address">Start Address</string>
    <string name="dest_address">Destination Address</string>
    <string name="title_nearby_camera_number">Number Of Cameras</string>
    <string name="summary_nearby_camera_number">Select how many cameras you will be able to see while moving on a route.</string>
    <string name="theme_values_follow_system_settings">Follow System Settings</string>
    <string name="theme_values_use_light_theme">Light Theme</string>
    <string name="theme_values_use_dark_theme">Dark Theme</string>
    <!--    <string name="dynamic_mode_on">Dynamic Mode On</string>-->
<!--    <string name="dynamic_mode_off">Dynamic Mode Off</string>-->
</resources>
