<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_by_route"
        android:enabled="true"
        android:icon="@drawable/ic_route_direction"
        android:title="@string/search_by_route"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search_nearby"
        android:enabled="true"
        android:icon="@drawable/ic_nearby"
        android:title="@string/search_by_proximity"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>