<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CameraPageHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/VideoInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/VideoPageTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/video_page_info_title"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/CameraIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_ip_address"/>
        <TextView
            android:id="@+id/CameraPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_port"/>
        <TextView
            android:id="@+id/CameraLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_latitude"/>
        <TextView
            android:id="@+id/CameraLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_longitude"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/VideoInfoLayout">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/ExoPlayerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:show_buffering="when_playing"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

</RelativeLayout>